@@ -15,43 +15,28 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
  *******************************************************************************/
-package panamagl.platform.macos;
+package panamagl.canvas;
 
-import panamagl.opengl.GL;
+import org.junit.Test;
+import panamagl.factory.PanamaGLFactory;
+import panamagl.platform.Platform;
 
-public class SampleTriangle {
+/**
+ * This test is intentionnaly named DurabilityTest* to be ignored by maven
+ * while running tests (surefire config keeps Test* or *Test or ITTest*)
+ */
+// VM ARGS : --enable-native-access=ALL-UNNAMED --enable-preview -Djava.library.path=.://usr/lib/x86_64-linux-gnu/
+//@Ignore("Will add to specific build profile later.")
+public class DurabilityTestGLCanvasSwing_linux {
+  public static int WAIT_FOR_RENDER_DISPATCHED_MS = 200;
 
-    public static void rgbaTriangle2D(GL gl, int width, int height) {
-      gl.glViewport(0, 0, width, height);
-      gl.glMatrixMode(GL.GL_PROJECTION);
-      gl.glLoadIdentity();
-      gl.glOrtho(0.0, width, 0.0, height, -1.0, 1.0);
-      gl.glMatrixMode(GL.GL_MODELVIEW);
-      gl.glLoadIdentity();
-
-      //-------------------------
-      //glDisable(GL_TEXTURE_2D);
-      gl.glDisable(GL.GL_BLEND);
-      gl.glEnable(GL.GL_DEPTH_TEST);
-
-      //-------------------------
-
-      gl.glBegin(GL.GL_TRIANGLES);
-
-      // bottom left / red
-      gl.glColor4f(1,0,0,1);
-      gl.glVertex3d(0,0,0);
-
-      // bottom right / green
-      gl.glColor4f(0,1,0, 1);
-      gl.glVertex3d(width,0,0);
-
-      // top right / blue
-      gl.glColor4f(0,0,1,1);
-      gl.glVertex3d(width, height,0);
-      gl.glEnd();
-      
-      gl.glFlush();
+  //@Test
+  public void whenPanelIsAdded_ThenGLEventListenerIsInvoked() throws InterruptedException {
+    if (!new Platform().isUnix())
+     return;
+    
+    PanamaGLFactory factory = PanamaGLFactory.select();
+    
+    DurabilityTestGLCanvasSwing.whenPanelIsAdded_ThenGLEventListenerIsInvoked(factory);
   }
-
 }
